--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,164 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+/* 
+---01 TYPOGRAPHY SYSTEM ---
+- Font sizes (px)
+10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
+
+- Font weights
+Default: 400
+Medium: 500
+Semi-bold: 600
+Bold: 700
+
+- Line heights
+Default: 1
+Small: 1.05
+Medium: 1.20
+Paragraph: 1.60
+Large: 1.8
+
+- Letter spacing
+-0.5px
+0.75px
+
+---02 COLORS ---
+- Primary: 
+- Tints:  
+- Shades: 
+- Accents:
+- Grays: #888 #666 #555 #333
+
+---03 IMAGES ---
+
+
+---05 SHADOWS ---
+0 2.4rem 4.8rem rgba(0, 0, 0, 0.08);
+0 1.2rem 3.2rem rgba(0, 0, 0, 0.03);
+
+
+---06 BORDER-RADIUS ---
+Default: 9px
+Medium: 11px
+
+---07 WHITESPACE ---
+2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
+*/
+
+:root {
+  --color-primary: #dd1a1a;
+  --color-secondary: #0c0c0c;
+  --color-tertiary: #ed8f8f;
+  --color-text-primary: #fff;
+  --color-text-secondary: #302f2f;
+  --color-text-tertiary: #fe1936;
+  --color-button-primary: #d93f3f;
+  --color-gray-lighter: #aaa;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%;
+  overflow-x: hidden;
+}
+
+body {
+  font-family: 'Rubik', sans-serif;
+  line-height: 1;
+  font-weight: 400;
+  color: #555;
+  background-color: #f5f5f5;
+}
+
+img {
+  width: 100%;
+}
+
+p {
+  font-size: 1.6rem;
+}
+
+/*************************/
+/* GENERAL COMPONENTS */
+/*************************/
+.container {
+  padding: 0 4.8rem;
+}
+
+.heading-primary {
+  font-size: 3.6rem;
+  margin-bottom: 1.2rem;
+}
+/*************************/
+/* HOME SECTION */
+/*************************/
+.section-home {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.home-title {
+  margin-bottom: 6.4rem;
+}
+
+.home-welcome {
   text-align: center;
+  margin-bottom: 4.8rem;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.home-welcome .heading-primary {
+  color: var(--color-text-tertiary);
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.home-input {
+  width: 70vw;
+  height: 4rem;
+  display: flex;
+  align-items: stretch;
+  justify-content: center;
+  padding: 0 4.8rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.home-input input {
+  width: 70%;
+  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.1);
+  border-style: none;
+  padding: 0 1rem;
+  margin-right: 4px;
 }
 
-.card {
-  padding: 2em;
+.home-input input:focus {
+  outline-color: var(--color-gray-lighter);
 }
 
-.read-the-docs {
-  color: #888;
+.btn {
+  font-size: 1.4rem;
+  font-weight: 600;
+  letter-spacing: 0.5px;
+  color: var(--color-text-primary);
+  background-color: var(--color-button-primary);
+  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.1);
+  border-style: none;
+  padding: 0 1.2rem;
+  cursor: pointer;
+}
+
+.btn:focus {
+  outline-color: var(--color-gray-lighter);
+}
+
+.btn:hover {
+}
+
+.btn:active {
+}
+
+.btn--input {
+  width: 30%;
 }
