--- a/src/App.css
+++ b/src/App.css
@@ -117,12 +117,12 @@ p {
 }
 
 .home-input {
-  width: 70vw;
+  width: 50vw;
   height: 4rem;
   display: flex;
   align-items: stretch;
   justify-content: center;
-  padding: 0 4.8rem;
+  margin: 0 auto;
 }
 
 .home-input input {
